--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button" href="#">Хочу сюда!</a>
+            <a class="navigation-link button button-main" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -182,7 +182,7 @@
             </a>
             <p class="hotel-type">Гостиница</p>
             <p class="hotel-price">От 4000 ₽</p>
-            <a class="hotel-button button" href="#">подробнее</a>
+            <a class="hotel-button button button-main" href="#">подробнее</a>
             <button class="hotel-button button button-dark" type="button">в избранное</button>
             <p class="hotel-stars hotel-stars-4">
               <span class="visually-hidden">4 звезды из 5.</span>
@@ -202,7 +202,7 @@
             <p class="hotel-type">Гостиница</p>
             <p class="hotel-price">От 5000 ₽</p>
 
-            <a class="hotel-button button" href="#">подробнее</a>
+            <a class="hotel-button button button-main" href="#">подробнее</a>
             <button class="hotel-button button button-favorite" type="button">в избранном</button>
 
             <p class="hotel-stars hotel-stars-4">
@@ -223,7 +223,7 @@
             <p class="hotel-type">Гостиница</p>
             <p class="hotel-price">От 2500 ₽</p>
 
-            <a class="hotel-button button" href="#">подробнее</a>
+            <a class="hotel-button button button-main" href="#">подробнее</a>
             <button class="hotel-button button button-dark" type="button">в избранное</button>
 
             <p class="hotel-stars hotel-stars-3">
@@ -243,7 +243,7 @@
             <p class="hotel-type">Гостиница</p>
             <p class="hotel-price">От 1500 ₽</p>
 
-            <a class="hotel-button button" href="#">подробнее</a>
+            <a class="hotel-button button button-main" href="#">подробнее</a>
             <button class="hotel-button button button-dark" type="button">в избранное</button>
 
             <p class="hotel-stars hotel-stars-2">
@@ -332,6 +332,5 @@
       </a>
     </footer>
   </div>
-
 </body>
 </html>
